--- a/hugo.toml
+++ b/hugo.toml
@@ -4,7 +4,7 @@ title = "OPPLET // SOVEREIGN ARCHITECTURE"
 
 [menu]
   [[menu.main]]
-    name = "PHILOSOPHY"
+    name = "PHILOSOPHY222"
     url = "/philosophy/"
     weight = 10
 
