--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,22 @@
-name: Deploy Hugo to VPS
+name: Deploy Hugo Site
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          hugo-version: "0.155.2"
-          extended: true
-
-      - name: Build site
-        run: hugo
-
-      - name: Copy site to VPS
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          source: "public/*"
-          target: "/home/user1/web/opplet.com/public_html/"
-          strip_components: 1
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /home/user1/hugo-src
+            git pull
+            hugo
